# autoforecast

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
examples/energy/: README.md  energy_demo.py
notebooks/: energy_walkthrough.ipynb
src/autoforecast/: __init__.py
src/autoforecast/experiments/: __init__.py  journal.py  metrics.py  promote.py
src/autoforecast/features/: __init__.py  build.py  catalog.py  dsl.py  select.py  validate.py
tests/: test_experiments.py  test_features.py
