[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoforecast"
version = "0.1.0"
description = "Auditable automated forecasting research: feature engineering, selection, tuning, and experiment journals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "James Hansen" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/autoforecast"]
